# keymaker-bot

./: .env.example  .gitignore  Cargo.toml  example.config.yml
.github/workflows/: shiftleft-analysis.yml
migrations/: 20201023180230_servers.sql  20201023203649_servers_categories.sql
src/: command_parser.rs  commandparser.rs  config.rs  errors.rs  extensions.rs  main.rs
src/commands/: mod.rs  register.rs
src/database/: mod.rs  models.rs
src/models/: well_known.rs
