[package]
name = "keymaker-bot"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.22"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "chrono", "postgres", "tls", "offline" ] }
dotenv = "0.15.0"
anyhow = "1"
thiserror = "1.0"
async-trait = "0.1.41"
serde = "1.0"
serde_yaml = "0.8.13"
url = "2.1.1"

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

matrix-sdk = {git = "https://github.com/matrix-org/matrix-rust-sdk.git", rev = "8f99180c99ccd74803565fb36098389198091ded"}
matrix-sdk-common-macros = {git = "https://github.com/matrix-org/matrix-rust-sdk.git", rev = "8f99180c99ccd74803565fb36098389198091ded"}
