[package]
name = "keymaker-bot"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
sqlx = { version = "0.4", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "chrono", "postgres", "tls", "offline" ] }
dotenv = "0.15.0"
color-eyre = "0.5"
thiserror = "1.0"
async-trait = "0.1.41"
serde = "1.0"
serde_yaml = "0.8.13"
url = "2.1.1"

mrsbfh = {git = "https://github.com/MTRNord/mrsbfh", rev = "3612d23d2c083a5b2f9683f38446d63fb46e9d8e"}

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk.git"
rev = "4f2cad8f626068f05d567588d8398d0952536a46"

